# gvsoc

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CMakeLists.txt  DRAMSys.md  Makefile  README.md  check_and_export_env.sh  check_and_set_env.sh  commands  dramsys_pushbutton.sh  dramsys_pushbutton_ETHenv.sh  requirements.txt  requirements_ci.txt  softhier_pushbutton.sh  sourceme.sh  sourceme_deeploy.sh  sourceme_systemc.sh  test.mk  test.sh  testset-github.cfg  testset.cfg  testset_examples.cfg  testset_withbuild.cfg
.github/: CODEOWNERS
.github/workflows/: build.yml
SoftHier_Meeting_Slides/: SoftHier_Biweekly_Meeting_11Aug2025.pptx  SoftHier_Biweekly_Meeting_22April2024.pptx  SoftHier_Biweekly_Meeting_26Feb2024.pptx  SoftHier_Biweekly_Meeting_29Jan2024.pptx  SoftHier_Biweekly_Meeting_30Sep2024.pptx  SoftHier_Biweekly_Meeting_6May2024.pptx  SoftHier_Biweekly_Meeting_8April2024.pptx  SoftHier_Biweekly_Meeting_8Feb2024.pptx  SoftHier_Biweekly_Meeting_8July2024.pptx
SoftHier_Meeting_Slides/Biweekly_Meeting/: SoftHier_Biweekly_Meeting_05May2025.pptx  SoftHier_Biweekly_Meeting_10Feb2025.pptx  SoftHier_Biweekly_Meeting_10Mar2025.pptx  SoftHier_Biweekly_Meeting_10Nov2025.pptx  SoftHier_Biweekly_Meeting_14Apr2025.pptx  SoftHier_Biweekly_Meeting_15Jan2024.pptx  SoftHier_Biweekly_Meeting_16Dec24.pptx  SoftHier_Biweekly_Meeting_16Jun2025.pptx  SoftHier_Biweekly_Meeting_16Sep2025.pptx  SoftHier_Biweekly_Meeting_18Mar2024.pptx  SoftHier_Biweekly_Meeting_24Jun2024.pptx  SoftHier_Biweekly_Meeting_26May2025.pptx  SoftHier_Biweekly_Meeting_27Jan2025.pptx  SoftHier_Biweekly_Meeting_27May2024.pptx  SoftHier_Biweekly_Meeting_27Oct2025.pptx  SoftHier_Biweekly_Meeting_28Oct2024.pptx  SoftHier_Biweekly_Meeting_29Sep2025.pptx  SoftHier_Biweekly_Meeting_2Dec24.pptx  SoftHier_Biweekly_Meeting_31Mar2025.pptx  SoftHier_Biweekly_Meeting_6May2024.pptx
SoftHier_Meeting_Slides/Stage_Report/: README.md  (+2 more)
add_dramsyslib_patches/: README.md  gvsoc_core.patch  gvsoc_pulp.patch  gvsoc_pulp_modify_for_DMA_DRAM_test.patch
benchmark_results/: README.md
claude_notes/: README.md
examples/: floonoc.elf  launch_linux.py  neureka_test  offload-multi_cluster.elf  rvv_fconv2d  testset.cfg
gapy/: CMakeLists.txt
implementation/: .gitignore  Makefile  README.md
soft_hier/: README.md  gvsoc_core.patch  gvsoc_pulp.patch
soft_hier/flex_cluster_sdk/: CMakeLists.txt
soft_hier/flex_cluster_sdk/app_example/: main.c
soft_hier/flex_cluster_sdk/app_example/include/: example_one_cluster_gemm.h
soft_hier/flex_cluster_sdk/runtime/: flex_memory.ld  flex_start.s
soft_hier/flex_cluster_sdk/runtime/deeploy_include/: flex_alloc_api.h  flex_runtime.h
soft_hier/flex_cluster_sdk/runtime/include/: flex_alloc.h  flex_cluster_arch.h  flex_cluster_arch.inc  flex_dma_pattern.h  flex_dma_pattern_3d.h  flex_dump.h  flex_group_barrier.h  flex_libfp16.h  flex_libfp8.h  flex_printf.h  flex_redmule.h  flex_runtime.h  flex_runtime_3d.h  flex_transpose_engine.h
soft_hier/flex_cluster_sdk/test/include/: flex_cluster_arch.h  flex_dma_pattern.h  flex_redmule.h  flex_runtime.h
soft_hier/flex_cluster_sdk/test/include/examples/: example_one_cluster_gemm.h
soft_hier/flex_cluster_sdk/test/include/kernels/common/: common_tiling.h
soft_hier/flex_cluster_sdk/test/include/kernels/gemm/: gemm_systolic_wise.h
solution/: cluster.json  cluster.py  l1_subsystem.py
sw/: README.md
tests/: testset.cfg  testset_ara.cfg  testset_chimera.cfg  testset_riscv_tests.cfg  testset_siracusa.cfg  testset_snitch.cfg  testset_spatz.cfg
tutorial/: helpers.mk  solutions.mk  tasks.mk
tutorial/integrate_hwpe/solutions/: CMakeLists.txt
tutorial/integrate_hwpe/solutions/pulp_open_hwpe/: cluster.json  cluster.py  l1_subsystem.py
(+1005 files in other folders)
